--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
 					<!-- footer logo -->
 					<div class="footer-logo">
-						<a href="index.php"><img src="img/logo-full.png" alt="logo"></a>
+						<a href="index.html"><img src="img/logo-full.png" alt="logo"></a>
 					</div>
 					<!-- /footer logo -->
 
